kubernetes/Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip-app-ingress-root
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.example.com    ##when an request comes from this host route the traffic to backend service i.e cip-app with port 30002(target port)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cip-ipapp   ##Give the service name to which you want to connect it to
            port:
              number: 30002
      - path: /name
        pathType: Prefix
        backend:
          service:
            name: cip-ipapp
            port:
              number: 30002 
##Ingress that match the host and path of the rule are sent to the listed backend.
##A defaultBackend is often configured in an Ingress controller to service any requests that do not match a path in the spec
